fixed loader not showing up

--- a/assets/css/sass/_loading.scss
+++ b/assets/css/sass/_loading.scss
@@ -9,6 +9,6 @@
     right: 0;
     bottom: 0;
     background: rgba(255, 255, 255, 0.8) url("../img/spinner.gif") center no-repeat;
-    z-index: 1000;
+    z-index: 1000000;
     cursor: default;
 }
